Unknown enum values default to null if not specified